--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
+server.port=9091
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/student-management-system
+spring.datasource.url=jdbc:mysql://localhost:3306/liquibasedb
 spring.datasource.username=root
 spring.datasource.password=2225046
-spring.jpa.show.sql=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
-server.port=9091
+
+liquibase.change-log= classpath:db/changelog/db.changelog-master.yaml
 
