jasper Reports added.

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.20.0</version>
+		</dependency>
 
 	</dependencies>
 
