--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,13 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/liquibasedb
 
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
-
 liquibase.change-log= classpath:db/changelog/db.changelog-master.yaml
-
 spring.datasource.url=jdbc:mysql://localhost:3306/liquibasedb
 spring.datasource.username=root
 spring.datasource.password=2225046
 spring.application.name=student-service
-#server.port=9091
+server.port=8080
 server.servlet.context-path=/student-service
-addressservice.base.url=http://localhost:8080/address-service
+addressservice.base.url=http://localhost:8081/address-service
 spring.jpa.hibernate.ddl-auto=update
